tests/ui/type-alias-impl-trait/under-binder.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/under-binder.rs:6:5
   |
LL | type Opaque<'a> = impl Sized + 'a;
   |             -- this generic parameter must be used with a generic lifetime parameter
...
LL |     f
   |     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
